prepare for language spec 0.2

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -23,8 +23,8 @@
     ],
     "folding": {
         "markers": {
-            "start": "\\[",
-            "end": "]"
+            "start": "\\)",
+            "end": ")"
         }
     },
 }
