--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "categories": [
         "Programming Languages"
     ],
+    "activationEvents": [
+        "onCommand:prqlSqlOutputPanel.open"
+    ],
+    "source": "src/extension.ts",
+    "main": "out/extension.js",
     "contributes": {
         "languages": [
             {
@@ -33,6 +38,30 @@
                 "scopeName": "source.prql",
                 "path": "./syntaxes/prql.tmLanguage.json"
             }
+        ],
+        "commands": [
+            {
+                "command": "prqlSqlOutputPanel.open",
+                "title": "Open SQL Output Panel",
+                "category": "PRQL"
+            }
         ]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "eslint --max-warnings 0 . && tsc -p ./",
+        "watch": "tsc -w -p ./"
+    },
+    "dependencies": {
+        "@types/vscode": "^1.71.0",
+        "prql-js": "^0.2.6",
+        "shiki": "^0.11.1"
+    },
+    "devDependencies": {
+        "@types/node": "^18.7.6",
+        "@typescript-eslint/eslint-plugin": "^5.37.0",
+        "@typescript-eslint/parser": "^5.37.0",
+        "eslint": "^8.23.1",
+        "typescript": "^4.8.3"
     }
 }
