--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "Programming Languages"
     ],
     "activationEvents": [
+        "onLanguage:prql",
         "onCommand:prqlSqlOutputPanel.open"
     ],
     "source": "src/extension.ts",
