--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "PRQL",
     "description": "Modern language for transforming data",
     "repository": {
-        "url": "https://github.com/aljazerzen/prql-code.git"
+        "url": "https://github.com/prql/prql-code.git"
     },
     "publisher": "prql",
     "version": "0.3.0",
@@ -64,5 +64,7 @@
         "@typescript-eslint/parser": "^5.37.0",
         "eslint": "^8.23.1",
         "typescript": "^4.8.3"
-    }
+    },
+    "icon": "resources/prql-logo.png"
+
 }
