--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prql",
   "displayName": "PRQL",
-  "description": "Modern language for transforming data",
+  "description": "PRQL is a modern language for transforming data — a simple, powerful, pipelined SQL replacement",
   "repository": {
     "url": "https://github.com/prql/prql-code.git"
   },
