--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
         "extensions": [
           ".prql"
         ],
-        "configuration": "./language-configuration.json"
+        "configuration": "./language-configuration.json",
+        "icon": {
+          "dark": "./resources/prql-logo.png",
+          "light": "./resources/prql-logo.png"
+        }
       }
     ],
     "grammars": [
