Add PRQL logo icon to .prql files display in file explorer and PRQL editor title bar (#40)

--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
         "extensions": [
           ".prql"
         ],
-        "configuration": "./language-configuration.json"
+        "configuration": "./language-configuration.json",
+        "icon": {
+          "dark": "./resources/prql-logo.png",
+          "light": "./resources/prql-logo.png"
+        }
       }
     ],
     "grammars": [
@@ -44,9 +48,26 @@
       {
         "command": "prqlSqlOutputPanel.open",
         "title": "Open SQL Output Panel",
-        "category": "PRQL"
+        "category": "PRQL",
+        "icon": "$(database)"
       }
-    ]
+    ],
+    "menus": {
+      "editor/title": [
+        {
+          "command": "prqlSqlOutputPanel.open",
+          "when": "resourceFilename =~ /.*(.prql)/",
+          "group": "navigation"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "command": "prqlSqlOutputPanel.open",
+          "when": "resourceFilename =~ /.*\\.(prql)/",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
