--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "activationEvents": [
     "onLanguage:prql",
-    "onCommand:prqlSqlOutputPanel.open"
+    "onCommand:prql.openSqlPreview"
   ],
   "source": "src/extension.ts",
   "main": "out/extension.js",
@@ -46,23 +46,23 @@
     ],
     "commands": [
       {
-        "command": "prqlSqlOutputPanel.open",
-        "title": "Open SQL Output Panel",
+        "command": "prql.openSqlPreview",
+        "title": "Open SQL Preview",
         "category": "PRQL",
-        "icon": "$(database)"
+        "icon": "$(open-preview)"
       }
     ],
     "menus": {
       "editor/title": [
         {
-          "command": "prqlSqlOutputPanel.open",
+          "command": "prql.openSqlPreview",
           "when": "resourceFilename =~ /.*(.prql)/",
           "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
-          "command": "prqlSqlOutputPanel.open",
+          "command": "prql.openSqlPreview",
           "when": "resourceFilename =~ /.*\\.(prql)/",
           "group": "navigation"
         }
