Rename Sql Output panel to Sql Preview (#47)
* use prql logo icon for .prql file ext. in prql language config (#39)

* add Open SQL Output Panel editor title and context menus (#41)

* rename Sql Ouput Panel to SQL Preview

- rename preview command to prql.openSqlPreview
- use vscode open-preview icon in the editor panel title bar for Sql Preview command
- rename sql output panel title to Sql Preview
- rename sql ouput panel id to prql.sqlPreviewPanel
- update Sql Preview info in README.md

Remaining: generate new demo gif with all the recent PRQL iconography and menu options update.

--- a/package.json
+++ b/package.json
@@ -42,23 +42,23 @@
     ],
     "commands": [
       {
-        "command": "prqlSqlOutputPanel.open",
-        "title": "Open SQL Output Panel",
+        "command": "prql.openSqlPreview",
+        "title": "Open SQL Preview",
         "category": "PRQL",
-        "icon": "$(database)"
+        "icon": "$(open-preview)"
       }
     ],
     "menus": {
       "editor/title": [
         {
-          "command": "prqlSqlOutputPanel.open",
+          "command": "prql.openSqlPreview",
           "when": "resourceFilename =~ /.*(.prql)/",
           "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
-          "command": "prqlSqlOutputPanel.open",
+          "command": "prql.openSqlPreview",
           "when": "resourceFilename =~ /.*\\.(prql)/",
           "group": "navigation"
         }
