--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
         "title": "Open SQL Preview",
         "category": "PRQL",
         "icon": "$(open-preview)"
+      },
+      {
+        "command": "prql.generateSqlFile",
+        "title": "Generate SQL File",
+        "category": "PRQL",
+        "icon": "$(database)"
       }
     ],
     "menus": {
@@ -54,11 +60,21 @@
           "command": "prql.openSqlPreview",
           "when": "resourceFilename =~ /\\.prql$/",
           "group": "navigation"
+        },
+        {
+          "command": "prql.generateSqlFile",
+          "when": "resourceFilename =~ /\\.prql$/",
+          "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
           "command": "prql.openSqlPreview",
+          "when": "resourceFilename =~ /\\.prql$/",
+          "group": "navigation"
+        },
+        {
+          "command": "prql.generateSqlFile",
           "when": "resourceFilename =~ /\\.prql$/",
           "group": "navigation"
         }
