Add PRQL: Generate SQL File command and editor context menu options (#49)
* simplify .prql resource filename matching pattern in menu commands

use /\\.prql$/" to match .prql filenames

* add Generate SQL File command to package.json

- with prql.generateSqlFile command id
- use built-in vscode $(database) icon for sql file
- add it to editor title and context menus

* use explicit vscode type imports and single quote strings

* add view/commands constants and new commands.ts

* add registerCommand and generateSqlFile implementation

--- a/package.json
+++ b/package.json
@@ -46,20 +46,36 @@
         "title": "Open SQL Preview",
         "category": "PRQL",
         "icon": "$(open-preview)"
+      },
+      {
+        "command": "prql.generateSqlFile",
+        "title": "Generate SQL File",
+        "category": "PRQL",
+        "icon": "$(database)"
       }
     ],
     "menus": {
       "editor/title": [
         {
           "command": "prql.openSqlPreview",
-          "when": "resourceFilename =~ /.*(.prql)/",
+          "when": "resourceFilename =~ /\\.prql$/",
+          "group": "navigation"
+        },
+        {
+          "command": "prql.generateSqlFile",
+          "when": "resourceFilename =~ /\\.prql$/",
           "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
           "command": "prql.openSqlPreview",
-          "when": "resourceFilename =~ /.*\\.(prql)/",
+          "when": "resourceFilename =~ /\\.prql$/",
+          "group": "navigation"
+        },
+        {
+          "command": "prql.generateSqlFile",
+          "when": "resourceFilename =~ /\\.prql$/",
           "group": "navigation"
         }
       ]
