--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,11 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2020",
-    "lib": [
-      "es2020"
-    ],
+    "lib": ["es2020"],
     "outDir": "out",
     "sourceMap": true,
     "strict": true,
     "rootDir": "src"
   },
-  "exclude": [
-    "node_modules",
-  ]
+  "exclude": ["node_modules"]
 }
