--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
         },
         {
           "command": "prql.copySqlToClipboard",
-          "when": "prql.sql",
+          "when": "prql.sqlPreivewActive",
           "group": "navigation"
         }
       ],
