Copy SQL to Clipboard UX (#59)
* add copy sql to clipboard command and feature impl.

- save prql.sql output in workspaceState
- set prql.sql context value for command when clauses
- show copy sql to clipboard menu icon when prql editor or sql preview are active

* refine copy to clipboard context menu option display

- use new prql.sqlPreviewActive flag in copy when clause
- add clear sql context and reset it on webview and active editor state changes

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* patch sqlPreviewActive flag typo

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "activationEvents": [
     "onLanguage:prql",
     "onCommand:prql.openSqlPreview",
-    "onCommand:prql.generateSqlFile"
+    "onCommand:prql.generateSqlFile",
+    "onCommand:prql.copySqlToClipboard"
   ],
   "contributes": {
     "languages": [
@@ -57,6 +58,12 @@
         "title": "Generate SQL File",
         "category": "PRQL",
         "icon": "$(database)"
+      },
+      {
+        "command": "prql.copySqlToClipboard",
+        "title": "Copy SQL to Clipboard",
+        "category": "PRQL",
+        "icon": "$(copy)"
       }
     ],
     "menus": {
@@ -69,6 +76,11 @@
         {
           "command": "prql.generateSqlFile",
           "when": "resourceFilename =~ /\\.prql$/",
+          "group": "navigation"
+        },
+        {
+          "command": "prql.copySqlToClipboard",
+          "when": "prql.sqlPreviewActive",
           "group": "navigation"
         }
       ],
