--- a/package.json
+++ b/package.json
@@ -96,6 +96,30 @@
           "group": "navigation"
         }
       ]
+    },
+    "configuration": {
+      "title": "PRQL",
+      "type": "object",
+      "properties": {
+        "prql.target": {
+          "type": "string",
+          "enum": [
+            "Ansi",
+            "BigQuery",
+            "ClickHouse",
+            "DuckDb",
+            "Generic",
+            "Hive",
+            "MsSql",
+            "MySql",
+            "PostgreSql",
+            "SQLite",
+            "Snowflake"
+          ],
+          "default": "Ansi",
+          "description": "PRQL compiler target dialect to use by default when generating SQL from pipeline definition files."
+        }
+      }
     }
   },
   "scripts": {
