--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,12 +12,12 @@ repos:
       - id: typos
         # https://github.com/crate-ci/typos/issues/347
         pass_filenames: false
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #  rev: v3.0.0-alpha.4
-  #  hooks:
-  #    - id: prettier
-  #      additional_dependencies:
-  #        - prettier
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.4
+    hooks:
+      - id: prettier
+        additional_dependencies:
+          - prettier
 ci:
   # Currently network access isn't supported in the CI product.
-  autoupdate_commit_msg: "chore: pre-commit autoupdate"
+  autoupdate_commit_msg: 'chore: pre-commit autoupdate'
