change PostgreSql target enum value to Postgres
to match target strings in new CompileOptions in prql-js lib

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
             "Hive",
             "MsSql",
             "MySql",
-            "PostgreSql",
+            "Postgres",
             "SQLite",
             "Snowflake"
           ],
