add new compiler signature comment toggle setting
and set in compile options passed to the prql compiler compile call

--- a/package.json
+++ b/package.json
@@ -136,6 +136,11 @@
           ],
           "default": "Ansi",
           "description": "PRQL compiler target dialect to use by default when generating SQL from pipeline definition files."
+        },
+        "prql.addCompilerSignatureComment": {
+          "type": "boolean",
+          "default": true,
+          "description": "Add PRQL compiler signature comment with SQL target dialect and compiler version to generated SQL."
         }
       }
     }
