--- a/package.json
+++ b/package.json
@@ -135,11 +135,13 @@
             "Snowflake"
           ],
           "default": "Ansi",
+          "order": 0,
           "description": "PRQL compiler target dialect to use by default when generating SQL from pipeline definition files."
         },
         "prql.addCompilerSignatureComment": {
           "type": "boolean",
           "default": true,
+          "order": 1,
           "description": "Add PRQL compiler signature comment with SQL target dialect and compiler version to generated SQL."
         }
       }
