change prql.target setting default to Generic to match default prql compiler option
- rework getting prql settings workspace config and PRQL compiler options init.
- add new `None` prql.target setting option
- skip setting target in PRQL CompileOptions when workspace prql.target setting is set to `None`
- simplify prql.target setting description

--- a/package.json
+++ b/package.json
@@ -132,11 +132,12 @@
             "MySql",
             "Postgres",
             "SQLite",
-            "Snowflake"
+            "Snowflake",
+            "None"
           ],
-          "default": "Ansi",
+          "default": "Generic",
           "order": 0,
-          "description": "PRQL compiler target dialect to use by default when generating SQL from pipeline definition files."
+          "description": "PRQL compiler target dialect to use when generating SQL from pipeline definition files."
         },
         "prql.addCompilerSignatureComment": {
           "type": "boolean",
