activat prql extension when prql.sqlPreviewPanel is loaded or deserialized

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "main": "out/extension.js",
   "activationEvents": [
     "onLanguage:prql",
+    "onWebviewPanel:prql.sqlPreviewPanel",
     "onCommand:prql.openSqlPreview",
     "onCommand:prql.generateSqlFile",
     "onCommand:prql.copySqlToClipboard",
