add prql.openSqlPreview command to file explorer context menu

--- a/package.json
+++ b/package.json
@@ -81,6 +81,13 @@
       }
     ],
     "menus": {
+      "explorer/context": [
+        {
+          "when": "resourceLangId == prql",
+          "command": "prql.openSqlPreview",
+          "group": "prql"
+        }
+      ],
       "editor/title": [
         {
           "command": "prql.openSqlPreview",
