use resourceLangId == prql when clause for prql commands
to simplify that when clause,
and use prql group for the prql commands in editor/title/context menu to show them at the end of that menu list

--- a/package.json
+++ b/package.json
@@ -83,25 +83,25 @@
     "menus": {
       "explorer/context": [
         {
-          "when": "resourceLangId == prql",
           "command": "prql.openSqlPreview",
+          "when": "resourceLangId == prql",
           "group": "prql"
         }
       ],
       "editor/title": [
         {
           "command": "prql.openSqlPreview",
-          "when": "resourceFilename =~ /\\.prql$/",
+          "when": "resourceLangId == prql",
           "group": "navigation"
         },
         {
           "command": "prql.generateSqlFile",
-          "when": "resourceFilename =~ /\\.prql$/",
+          "when": "resourceLangId == prql",
           "group": "navigation"
         },
         {
           "command": "prql.viewSettings",
-          "when": "resourceFilename =~ /\\.prql$/",
+          "when": "resourceLangId == prql",
           "group": "navigation"
         },
         {
@@ -113,13 +113,13 @@
       "editor/title/context": [
         {
           "command": "prql.openSqlPreview",
-          "when": "resourceFilename =~ /\\.prql$/",
-          "group": "navigation"
+          "when": "resourceLangId == prql",
+          "group": "prql"
         },
         {
           "command": "prql.generateSqlFile",
-          "when": "resourceFilename =~ /\\.prql$/",
-          "group": "navigation"
+          "when": "resourceLangId == prql",
+          "group": "prql"
         }
       ]
     },
