update prql.generateSqlFile command to work with the file explorer context menu
and generate sql from a prql file without opening the prql source document

--- a/package.json
+++ b/package.json
@@ -86,6 +86,11 @@
           "command": "prql.openSqlPreview",
           "when": "resourceLangId == prql",
           "group": "prql"
+        },
+        {
+          "command": "prql.generateSqlFile",
+          "when": "resourceLangId == prql",
+          "group": "prql"
         }
       ],
       "editor/title": [
