enable copy to clipboard on prql docs and in editor/title/context menu

--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
         },
         {
           "command": "prql.copySqlToClipboard",
-          "when": "prql.sqlPreviewActive",
+          "when": "prql.sqlPreviewActive || resourceLangId == prql",
           "group": "navigation"
         }
       ],
@@ -124,6 +124,11 @@
         {
           "command": "prql.generateSqlFile",
           "when": "resourceLangId == prql",
+          "group": "prql"
+        },
+        {
+          "command": "prql.copySqlToClipboard",
+          "when": "prql.sqlPreviewActive || resourceLangId == prql",
           "group": "prql"
         }
       ]
