add new prql file and text editor context menus (#118)
* add prql.openSqlPreview command to file explorer context menu

* use resourceLangId == prql when clause for prql commands

to simplify that when clause,
and use prql group for the prql commands in editor/title/context menu to show them at the end of that menu list

* update prql.generateSqlFile command to work with the file explorer context menu

and generate sql from a prql file without opening the prql source document

* enable copy to clipboard on prql docs and in editor/title/context menu

* change PRQL Settings command title to View PRQL Settings

and show it in PRQL editor/title/context menus too

--- a/package.json
+++ b/package.json
@@ -75,44 +75,66 @@
       },
       {
         "command": "prql.viewSettings",
-        "title": "Settings",
+        "title": "View PRQL Settings",
         "category": "PRQL",
         "icon": "$(gear)"
       }
     ],
     "menus": {
+      "explorer/context": [
+        {
+          "command": "prql.openSqlPreview",
+          "when": "resourceLangId == prql",
+          "group": "prql"
+        },
+        {
+          "command": "prql.generateSqlFile",
+          "when": "resourceLangId == prql",
+          "group": "prql"
+        }
+      ],
       "editor/title": [
         {
           "command": "prql.openSqlPreview",
-          "when": "resourceFilename =~ /\\.prql$/",
+          "when": "resourceLangId == prql",
           "group": "navigation"
         },
         {
           "command": "prql.generateSqlFile",
-          "when": "resourceFilename =~ /\\.prql$/",
+          "when": "resourceLangId == prql",
           "group": "navigation"
         },
         {
           "command": "prql.viewSettings",
-          "when": "resourceFilename =~ /\\.prql$/",
+          "when": "resourceLangId == prql",
           "group": "navigation"
         },
         {
           "command": "prql.copySqlToClipboard",
-          "when": "prql.sqlPreviewActive",
+          "when": "prql.sqlPreviewActive || resourceLangId == prql",
           "group": "navigation"
         }
       ],
       "editor/title/context": [
         {
           "command": "prql.openSqlPreview",
-          "when": "resourceFilename =~ /\\.prql$/",
-          "group": "navigation"
+          "when": "resourceLangId == prql",
+          "group": "prql"
         },
         {
           "command": "prql.generateSqlFile",
-          "when": "resourceFilename =~ /\\.prql$/",
-          "group": "navigation"
+          "when": "resourceLangId == prql",
+          "group": "prql"
+        },
+        {
+          "command": "prql.viewSettings",
+          "when": "resourceLangId == prql",
+          "group": "prql"
+        },
+        {
+          "command": "prql.copySqlToClipboard",
+          "when": "prql.sqlPreviewActive || resourceLangId == prql",
+          "group": "prql"
         }
       ]
     },
