--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "url": "https://github.com/prql/prql-vscode.git"
   },
   "publisher": "prql-lang",
-  "version": "0.6.0",
+  "version": "0.6.1",
+  "icon": "resources/prql-logo.png",
   "engines": {
     "vscode": "^1.65.0"
   },
@@ -182,11 +183,6 @@
     "compile": "eslint --max-warnings 0 . && tsc -p ./",
     "watch": "tsc -w -p ./"
   },
-  "dependencies": {
-    "@types/vscode": "^1.76.0",
-    "prql-js": "^0.5.2",
-    "shiki": "^0.14.1"
-  },
   "devDependencies": {
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
@@ -194,5 +190,9 @@
     "eslint": "^8.36.0",
     "typescript": "^4.9.5"
   },
-  "icon": "resources/prql-logo.png"
+  "dependencies": {
+    "@types/vscode": "^1.76.0",
+    "prql-js": "^0.6.1",
+    "shiki": "^0.14.1"
+  }
 }
