fix: Change default target setting to be `None`
It was `Generic` historically, but then supplying a `target:sql.bigquery` doesn't work

--- a/package.json
+++ b/package.json
@@ -159,7 +159,7 @@
             "Snowflake",
             "None"
           ],
-          "default": "Generic",
+          "default": "None",
           "order": 0,
           "description": "PRQL compiler target dialect to use when generating SQL from pipeline definition files."
         },
