refactor!: Target name changes to reflect upstream changes (#239)
* fix: remove Hive target

* refactor!: None -> Any

* docs: update README about target option

* docs: update changelog

--- a/package.json
+++ b/package.json
@@ -151,13 +151,12 @@
             "ClickHouse",
             "DuckDb",
             "Generic",
-            "Hive",
             "MsSql",
             "MySql",
             "Postgres",
             "SQLite",
             "Snowflake",
-            "None"
+            "Any"
           ],
           "default": "Generic",
           "order": 0,
