--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2020",
-    "lib": ["es2020"],
+    "target": "ES2021",
+    "lib": ["ES2021", "DOM"],
     "outDir": "out",
     "sourceMap": true,
     "strict": true,
