--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/prql/prql-vscode.git"
   },
   "publisher": "prql-lang",
-  "version": "0.11.4",
+  "version": "0.12.2",
   "icon": "resources/prql-logo.png",
   "engines": {
     "vscode": "^1.65.0"
@@ -204,7 +204,7 @@
   },
   "dependencies": {
     "@types/vscode": "^1.90.0",
-    "prql-js": "^0.12.1",
+    "prqlc": "^0.12.2",
     "shiki": "^0.14.7"
   }
 }
